--- a/urtupdater.ui
+++ b/urtupdater.ui
@@ -46,12 +46,12 @@
      <height>22</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuFiles">
-    <property name="title">
-     <string>Files</string>
-    </property>
-   </widget>
-   <addaction name="menuFiles"/>
+   <property name="minimumSize">
+    <size>
+     <width>0</width>
+     <height>0</height>
+    </size>
+   </property>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
