--- a/images.qrc
+++ b/images.qrc
@@ -7,6 +7,8 @@
         <file>images/urtupdater.icns</file>
         <file>images/urtupdater.ico</file>
         <file>images/urtupdater.png</file>
+        <file>images/urt_updating.gif</file>
+        <file>images/urt_play.gif</file>
     </qresource>
     <qresource prefix="/flags">
         <file>be.png</file>
